--- a/WEB/LoginECadastro/Login.html
+++ b/WEB/LoginECadastro/Login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,16 @@
   <title>Login</title>
   <link rel="stylesheet" href="Login.css">
   <script src="https://kit.fontawesome.com/cf6fa412bd.js" crossorigin="anonymous"></script>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.3.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
+
 <body>
-    <img class="imagem" src="allianz.jpg">
+
+
+  <img class="imagem" src="allianz.jpg">
+
   <div class="container">
-    <img class="logo" src="logo.webp">
+    <img class="logo" src="ticket.png">
     <div class="buttonsForm">
       <div class="btnColor"></div>
       <button id="btnSignin">Sign in</button>
@@ -31,12 +37,14 @@
     </form>
 
     <form id="signup">
-      <input type="text" placeholder="Email" required />
+      <input type="text" placeholder="Nome" required />
       <i class="fas fa-envelope iEmail"></i>
-      <input type="password" placeholder="Password" required />
+      <input type="password" placeholder="E-Mail" required />
       <i class="fas fa-lock iPassword"></i>
-      <input type="password" placeholder="Password" required />
+      <input type="password" placeholder="Telefone" required />
       <i class="fas fa-lock iPassword2"></i>
+      <input type="password" placeholder="Data de Nascimento" required />
+      <i class="fi fi-rr-calendar iCalendar "></i>
       <div class="divCheck">
       </div>
       <button type="submit">Sign up</button>
@@ -45,4 +53,5 @@
 
   <script src="Login.js"></script>
 </body>
+
 </html>
