--- a/WEB/TicketGol/Eventos.html
+++ b/WEB/TicketGol/Eventos.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
-
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <title>TicketGol - Eventos</title>
+  <title>TicketGol</title>
   <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone3.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="Eventos/css/Eventos.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
+  <header>
+    <img src="Eventos/img/img-logo.png" class="logo" />
+    <a class="titulo-menu">TicketGol</a>
+
+    <ul>
+      <li><a href="#">Início</a></li>
+      <li><a href="#">Eventos</a></li>
+      <li><a href="#">Informações</a></li>
+    </ul>
+
+    <button class="btn">
+      <img src="Eventos/img/img-entrar.png" />Login
+    </button>
+  </header>
+
   <div class="container">
-    <img src="Eventos/img/img-morumbi.jpg" class="img-fundo" />
-
-    <header>
-      <img src="Eventos/img/img-logo.png" class="logo" />
-      <a class="titulo-menu">TicketGol</a>
-
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Eventos</a></li>
-        <li><a href="#">Informações</a></li>
-      </ul>
-
-      <button class="btn">
-        <img src="Eventos/img/img-user2.png" />Login
-      </button>
-    </header>
-
     <div class="card-pt1">
       <div class="card">
         <div class="image-box">
@@ -79,21 +74,6 @@
           <h2>Corinthians x São Bernardo</h2>
           <p>Quinta, 14/03/2024</p>
           <p>Estádio: Primeiro de Maio</p>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Eventos/img/img-centenario.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Eventos/img/img-gremio.png" />
-          <h1>X</h1>
-          <img src="Eventos/img/img-caxias.png" class="img2" />
-          <h2>Grêmio x Caxias</h2>
-          <p>Sábado, 16/03/2024</p>
-          <p>Estádio: Centenário</p>
         </div>
       </div>
 
@@ -173,23 +153,7 @@
           <p>Estádio: Centenário</p>
         </div>
       </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Eventos/img/img-centenario.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Eventos/img/img-gremio.png" />
-          <h1>X</h1>
-          <img src="Eventos/img/img-caxias.png" class="img2" />
-          <h2>Grêmio x Caxias</h2>
-          <p>Sábado, 16/03/2024</p>
-          <p>Estádio: Centenário</p>
-        </div>
-      </div>
     </div>
   </div>
 </body>
-
 </html>
