--- a/WEB/TicketGol/Home.html
+++ b/WEB/TicketGol/Home.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="Home/img/ticket_logoVermelho2.png" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone3.png" />
+  <title>TicketGol</title>
   <link rel="stylesheet" href="Home/css/Home.css" />
   <script src="Home/js/Home.js" defer></script>
-  <title>TicketGol</title>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -79,13 +82,12 @@
         |
         <a href="Informacoes.html">Informações</a>
       </p>
-      <p class="footer-company-name">Copyright © 2021 <strong>SagarDeveloper</strong> All rights reserved</p>
+      <p class="footer-company-name">Copyright © 2021 <strong>TicketGol</strong> All rights reserved</p>
     </div>
     <div class="footer-center">
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span>Ticket</span>
-          Gol</p>
+        <p><span>São Paulo, SP</span></p>
       </div>
       <div>
         <i class="fa fa-phone"></i>
@@ -93,23 +95,18 @@
       </div>
       <div>
         <i class="fa fa-envelope"></i>
-        <p><a href="mailto:sagar00001.co@gmail.com">ticketgol@gmail.com</a></p>
+        <p><a href="mailto:sagar00001.co@gmail.com">contato.ticketgol@gmail.com</a></p>
       </div>
     </div>
     <div class="footer-right">
       <p class="footer-company-about">
         <span>Sobre Nós</span>
-        <strong>Sagar Developer</strong> is a Youtube channel where you can find more creative CSS Animations
-        and
-        Effects along with
-        HTML, JavaScript and Projects using C/C++.
+        <strong>TicketGol - </strong>Somos a sua porta de entrada para a emoção e a paixão dos grandes jogos. Na nossa plataforma, você encontrará uma ampla seleção de ingressos para os jogos mais emocionantes do momento. 
       </p>
       <div class="footer-icons">
         <a href="#"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-instagram"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
         <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-youtube"></i></a>
       </div>
     </div>
   </footer>
