--- a/WEB/TicketGol/Login.html
+++ b/WEB/TicketGol/Login.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="Login/css/Login.css" />
-    <script
-      src="https://kit.fontawesome.com/cf6fa412bd.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <img class="imagem" src="Login/img/allianz.jpg" />
-    <div class="container">
-      <img class="logo" src="Login/img/logo.webp" />
-      <div class="buttonsForm">
-        <div class="btnColor"></div>
-        <button id="btnSignin">Sign in</button>
-        <button id="btnSignup">Sign up</button>
-      </div>
-
-      <form id="signin">
-        <input type="text" placeholder="Email" required />
-        <i class="fas fa-envelope iEmail"></i>
-        <input type="password" placeholder="Password" required />
-        <i class="fas fa-lock iPassword"></i>
-        <div class="divCheck">
-          <input type="checkbox" />
-          <span>Remember Password</span>
-        </div>
-        <button type="submit">Sign in</button>
-      </form>
-
-      <form id="signup">
-        <input type="text" placeholder="Email" required />
-        <i class="fas fa-envelope iEmail"></i>
-        <input type="password" placeholder="Password" required />
-        <i class="fas fa-lock iPassword"></i>
-        <input type="password" placeholder="Password" required />
-        <i class="fas fa-lock iPassword2"></i>
-        <div class="divCheck"></div>
-        <button type="submit">Sign up</button>
-      </form>
+<html lang="PT-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone3.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TicketGol</title>
+  <link rel="stylesheet" href="Login/css/Login.css">
+  <script src="https://kit.fontawesome.com/cf6fa412bd.js" crossorigin="anonymous"></script>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.3.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+</head>
+<body>
+  <img class="imagem" src="Login/img/allianz.jpg">
+  <div class="container">
+    <img class="logo" src="Login/img/ticket.png">
+    <div class="buttonsForm">
+      <div class="btnColor"></div>
+      <button id="btnSignin">Sign in</button>
+      <button id="btnSignup">Sign up</button>
     </div>
-
-    <script src="/Login/js/Login.js"></script>
-  </body>
+    <form id="signin">
+      <input type="text" placeholder="Email" required />
+      <i class="fas fa-envelope iEmail"></i>
+      <input type="password" placeholder="Password" required />
+      <i class="fas fa-lock iPassword"></i>
+      <div class="divCheck">
+        <input type="checkbox" />
+        <span>Remember Password</span>
+      </div>
+      <button type="submit">Sign in</button>
+    </form>
+    <form id="signup">
+      <input type="text" placeholder="Nome" required />
+      <i class="fas fa-envelope iEmail"></i>
+      <input type="password" placeholder="E-Mail" required />
+      <i class="fas fa-lock iPassword"></i>
+      <input type="password" placeholder="Telefone" required />
+      <i class="fas fa-lock iPassword2"></i>
+      <input type="password" placeholder="Data de Nascimento" required />
+      <i class="fi fi-rr-calendar iCalendar "></i>
+      <div class="divCheck">
+      </div>
+      <button type="submit">Sign up</button>
+    </form>
+  </div>
+  <script src="Login/js/Login.js"></script>
+</body>
 </html>
