--- a/WEB/TicketGol/Eventos.html
+++ b/WEB/TicketGol/Eventos.html
@@ -5,29 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <title>TicketGol</title>
-  <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone3.png" />
+  <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone2.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="Eventos/css/Eventos.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <header>
-    <img src="Eventos/img/img-logo.png" class="logo" />
-    <a class="titulo-menu">TicketGol</a>
-
+    <a href="Home.html">
+      <img src="Eventos/img/img-logo3.png" class="logo">
+  </a>
     <ul>
-      <li><a href="#">Início</a></li>
-      <li><a href="#">Eventos</a></li>
-      <li><a href="#">Informações</a></li>
+      <li><a href="Home.html">Início</a></li>
+      <li><a href="Eventos.html">Eventos</a></li>
+      <li><a href="Informacoes.html">Informações</a></li>
     </ul>
 
     <button class="btn">
-      <img src="Eventos/img/img-entrar.png" />Login
+      <a href="Login.html" class="btn">
+        <img src="Eventos/img/img-entrar.png" alt="Entrar">Login
+    </a>
     </button>
+
   </header>
 
   <div class="container">
@@ -155,5 +160,47 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer-distributed">
+    <div class="footer-left">
+      <h3>Ticket<span>Gol</span></h3>
+      <p class="footer-links">
+        <a href="Home.html">Início</a>
+        |
+        <a href="Eventos.html">Eventos</a>
+        |
+        <a href="Informacoes.html">Informações</a>
+      </p>
+      <p class="footer-company-name">Copyright © 2021 <strong>TicketGol</strong> All rights reserved</p>
+    </div>
+    <div class="footer-center">
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p><span>São Paulo, SP</span></p>
+      </div>
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>+55 (11) 933548219</p>
+      </div>
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="mailto:sagar00001.co@gmail.com">contato.ticketgol@gmail.com</a></p>
+      </div>
+    </div>
+    <div class="footer-right">
+      <p class="footer-company-about">
+        <span>Sobre Nós</span>
+        <strong>TicketGol - </strong>Somos a sua porta de entrada para a emoção e a paixão dos grandes jogos. Na nossa plataforma, você encontrará uma ampla seleção de ingressos para os jogos mais emocionantes do momento. 
+      </p>
+      <div class="footer-icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+      </div>
+    </div>
+  </footer>
+</body>
+
+</html>
 </body>
 </html>
