--- a/WEB/TicketGol/Home.html
+++ b/WEB/TicketGol/Home.html
@@ -6,14 +6,14 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- Título da página e ícone -->
+  <!-- Título da Página e Ícone -->
   <title>TicketGol</title>
   <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone2.png" />
 
-  <!-- Meta tags para responsividade -->
+  <!-- Meta tags para Responsividade -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Estilos CSS -->
+  <!-- Link do CSS -->
   <link rel="stylesheet" type="text/css" media="screen" href="Home/css/Home.css" />
 
   <!-- Fontes externas -->
@@ -25,29 +25,34 @@
 </head>
 
 <body>
-  <!-- Cabeçalho -->
+
+  <!-- Começo do Cabeçalho -->
   <header>
+
+    <!-- Logo do Site -->
     <a href="Home.html">
-      <img src="Eventos/img/img-logo3.png" class="logo">
+      <img src="Jogos/img/img-logo3.png" class="logo">
   </a>
+
     <ul>
       <!-- Links de navegação -->
       <li><a href="Home.html">Início</a></li>
-      <li><a href="Eventos.html">Eventos</a></li>
+      <li><a href="Jogos.html">Jogos</a></li>
       <li><a href="Informacoes.html">Informações</a></li>
     </ul>
 
     <!-- Botão de login -->
     <button class="btn">
       <a href="Login.html" class="btn">
-        <img src="Eventos/img/img-entrar.png" alt="Entrar">Login
-    </a>
+        <img src="Jogos/img/img-entrar.png" alt="Entrar">Login
+      </a>
     </button>
 
   </header>
 
   <!-- Slider -->
   <div class="slider">
+
     <div class="slides">
       <!-- Botões de rádio para navegação -->
       <input type="radio" name="radio-btn" id="radio1" />
@@ -95,7 +100,7 @@
       <p class="footer-links">
         <a href="Home.html">Início</a>
         |
-        <a href="Eventos.html">Eventos</a>
+        <a href="Jogos.html">Jogos</a>
         |
         <a href="Informacoes.html">Informações</a>
       </p>
@@ -106,11 +111,11 @@
       <!-- Informações de contato -->
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span>São Paulo, SP</span></p>
+        <p><span><b>São Paulo, SP</b></span></p>
       </div>
       <div>
         <i class="fa fa-phone"></i>
-        <p>+55 (11)93354-8219</p>
+        <p>+55 (11) 93354-8219</p>
       </div>
       <div>
         <i class="fa fa-envelope"></i>
