--- a/WEB/TicketGol/Jogos.html
+++ b/WEB/TicketGol/Jogos.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <title>TicketGol</title>
-  <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone2.png" />
+  <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" media="screen" href="Eventos/css/Eventos.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="Jogos/css/Jogos.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
@@ -17,19 +17,22 @@
 </head>
 
 <body>
+
   <header>
+
     <a href="Home.html">
-      <img src="Eventos/img/img-logo3.png" class="logo">
+      <img src="Jogos/img/img-logo3.png" class="logo">
   </a>
+
     <ul>
       <li><a href="Home.html">Início</a></li>
-      <li><a href="Eventos.html">Eventos</a></li>
+      <li><a href="Jogos.html">Jogos</a></li>
       <li><a href="Informacoes.html">Informações</a></li>
     </ul>
 
     <button class="btn">
       <a href="Login.html" class="btn">
-        <img src="Eventos/img/img-entrar.png" alt="Entrar">Login
+        <img src="Jogos/img/img-entrar.png" alt="Entrar">Login
     </a>
     </button>
 
@@ -39,61 +42,81 @@
     <div class="card-pt1">
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-morumbi.jpg" />
+          <img src="Jogos/img/img-morumbi.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-saopaulo.png" />
+          <img src="Jogos/img/img-saopaulo.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-novorizontino.png" class="img2" />
+          <img src="Jogos/img/img-novorizontino.png" class="img2" />
           <h2>São Paulo x Novorizontino</h2>
           <p>Domingo, 17/03/2024</p>
           <p>Estádio: Morumbis</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
 
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-barueri.jpg" />
+          <img src="Jogos/img/img-barueri.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-palmeiras.png" />
+          <img src="Jogos/img/img-palmeiras.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-pontepreta.png" class="img2" />
+          <img src="Jogos/img/img-pontepreta.png" class="img2" />
           <h2>Palmeiras x Ponte Preta</h2>
           <p>Sábado, 16/03/2024</p>
           <p>Estádio: Arena Barueri</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
 
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-pdm.jpg" />
+          <img src="Jogos/img/img-pdm.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-corinthians.png" />
+          <img src="Jogos/img/img-corinthians.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-saobernardo.png" class="img3" />
+          <img src="Jogos/img/img-saobernardo.png" class="img3" />
           <h2>Corinthians x São Bernardo</h2>
           <p>Quinta, 14/03/2024</p>
           <p>Estádio: Primeiro de Maio</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
 
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-centenario.jpg" />
+          <img src="Jogos/img/img-centenario.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-gremio.png" />
+          <img src="Jogos/img/img-gremio.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-caxias.png" class="img2" />
+          <img src="Jogos/img/img-caxias.png" class="img2" />
           <h2>Grêmio x Caxias</h2>
           <p>Sábado, 16/03/2024</p>
           <p>Estádio: Centenário</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
     </div>
@@ -101,61 +124,81 @@
     <div class="card-pt2">
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-morumbi.jpg" />
+          <img src="Jogos/img/img-morumbi.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-saopaulo.png" />
+          <img src="Jogos/img/img-saopaulo.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-novorizontino.png" class="img2" />
+          <img src="Jogos/img/img-novorizontino.png" class="img2" />
           <h2>São Paulo x Novorizontino</h2>
           <p>Domingo, 17/03/2024</p>
           <p>Estádio: Morumbis</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
 
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-barueri.jpg" />
+          <img src="Jogos/img/img-barueri.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-palmeiras.png" />
+          <img src="Jogos/img/img-palmeiras.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-pontepreta.png" class="img2" />
+          <img src="Jogos/img/img-pontepreta.png" class="img2" />
           <h2>Palmeiras x Ponte Preta</h2>
           <p>Sábado, 16/03/2024</p>
           <p>Estádio: Arena Barueri</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
 
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-pdm.jpg" />
+          <img src="Jogos/img/img-pdm.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-corinthians.png" />
+          <img src="Jogos/img/img-corinthians.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-saobernardo.png" class="img3" />
+          <img src="Jogos/img/img-saobernardo.png" class="img3" />
           <h2>Corinthians x São Bernardo</h2>
           <p>Quinta, 14/03/2024</p>
           <p>Estádio: Primeiro de Maio</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
 
       <div class="card">
         <div class="image-box">
-          <img src="Eventos/img/img-centenario.jpg" />
+          <img src="Jogos/img/img-centenario.jpg" />
         </div>
 
         <div class="content">
-          <img src="Eventos/img/img-gremio.png" />
+          <img src="Jogos/img/img-gremio.png" />
           <h1>X</h1>
-          <img src="Eventos/img/img-caxias.png" class="img2" />
+          <img src="Jogos/img/img-caxias.png" class="img2" />
           <h2>Grêmio x Caxias</h2>
           <p>Sábado, 16/03/2024</p>
           <p>Estádio: Centenário</p>
+          <button class="btn-comprar">
+            <a href="Login.html" class="btn-comprar">
+              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
+          </a>
+          </button>
         </div>
       </div>
     </div>
@@ -167,7 +210,7 @@
       <p class="footer-links">
         <a href="Home.html">Início</a>
         |
-        <a href="Eventos.html">Eventos</a>
+        <a href="Jogos.html">Eventos</a>
         |
         <a href="Informacoes.html">Informações</a>
       </p>
@@ -176,11 +219,11 @@
     <div class="footer-center">
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span>São Paulo, SP</span></p>
+        <p><span><b>São Paulo, SP</b></span></p>
       </div>
       <div>
         <i class="fa fa-phone"></i>
-        <p>+55 (11) 933548219</p>
+        <p>+55 (11) 93354-8219</p>
       </div>
       <div>
         <i class="fa fa-envelope"></i>
