--- a/WEB/TicketGol/Login.html
+++ b/WEB/TicketGol/Login.html
@@ -8,7 +8,7 @@
   
   <!-- Título da página e ícone -->
   <title>TicketGol</title>
-  <link rel="icon" type="image/x-icon" href="Eventos/img/img-icone2.png" />
+  <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
   
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="Login/css/Login.css">
