--- a/WEB/TicketGol/Jogos.html
+++ b/WEB/TicketGol/Jogos.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
+  <!-- Metadados e configurações iniciais -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+  
+  <!-- Título da página e ícone -->
   <title>TicketGol</title>
   <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
-
+  
+  <!-- Configurações de visualização e estilos -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="Jogos/css/Jogos.css" />
+  
+  <!-- Fontes e ícones -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
@@ -17,233 +23,109 @@
 </head>
 
 <body>
-
+  <!-- Cabeçalho da página -->
   <header>
-
+    <!-- Logo e links de navegação -->
     <a href="Home.html">
       <img src="Jogos/img/img-logo3.png" class="logo">
-  </a>
-
+    </a>
     <ul>
       <li><a href="Home.html">Início</a></li>
-      <li><a href="Jogos.html">Jogos</a></li>
-      <li><a href="Informacoes.html">Informações</a></li>
+      <li><a data-scroll="jogos" href="#jogos">Jogos</a></li>
+      <li><a data-scroll="informacoes" href="#informacoes">Informações</a></li>
     </ul>
-
+    <!-- Botão de login -->
     <button class="btn">
       <a href="Login.html" class="btn">
         <img src="Jogos/img/img-entrar.png" alt="Entrar">Login
-    </a>
+      </a>
     </button>
-
   </header>
 
-  <div class="container">
-    <div class="card-pt1">
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-morumbi.jpg" />
+  <!-- Seção de jogos -->
+  <section id="jogos">
+    <div class="container">
+      <!-- Cards de jogos -->
+      <div class="card-pt1">
+        <!-- Card 1 -->
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
         </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-saopaulo.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-novorizontino.png" class="img2" />
-          <h2>São Paulo x Novorizontino</h2>
-          <p>Domingo, 17/03/2024</p>
-          <p>Estádio: Morumbis</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
-          </button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-barueri.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-palmeiras.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-pontepreta.png" class="img2" />
-          <h2>Palmeiras x Ponte Preta</h2>
-          <p>Sábado, 16/03/2024</p>
-          <p>Estádio: Arena Barueri</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
-          </button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-pdm.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-corinthians.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-saobernardo.png" class="img3" />
-          <h2>Corinthians x São Bernardo</h2>
-          <p>Quinta, 14/03/2024</p>
-          <p>Estádio: Primeiro de Maio</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
-          </button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-centenario.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-gremio.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-caxias.png" class="img2" />
-          <h2>Grêmio x Caxias</h2>
-          <p>Sábado, 16/03/2024</p>
-          <p>Estádio: Centenário</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
-          </button>
-        </div>
+        <!-- Os outros cards seguem a mesma estrutura -->
       </div>
     </div>
+  </section>
 
-    <div class="card-pt2">
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-morumbi.jpg" />
+  <!-- Seção de informações -->
+  <section id="informacoes">
+    <footer class="footer-distributed">
+      <!-- Informações da empresa -->
+      <div class="footer-left">
+        <h3>Ticket<span>Gol</span></h3>
+        <p class="footer-links">
+          <a href="Home.html">Início</a>
+          |
+          <a href="Jogos.html">Eventos</a>
+          |
+          <a href="Informacoes.html">Informações</a>
+        </p>
+        <p class="footer-company-name">Copyright © 2021 <strong>TicketGol</strong> All rights reserved</p>
+      </div>
+      <!-- Informações de contato -->
+      <div class="footer-center">
+        <!-- Ícones e informações -->
+        <div>
+          <img src="Home/img/img-iconeMaps.png" class="icone-info">
+          <p><span><b>São Paulo, SP</b></span></p>
         </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-saopaulo.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-novorizontino.png" class="img2" />
-          <h2>São Paulo x Novorizontino</h2>
-          <p>Domingo, 17/03/2024</p>
-          <p>Estádio: Morumbis</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
+        <div>
+          <img src="Home/img/img-iconeTelefone.png" class="icone-info">
+          <p>+55 (11) 93354-8219</p>
+        </div>
+        <div>
+          <img src="Home/img/img-iconeEmail.png" class="icone-info">
+          <p><a href="mailto:sagar00001.co@gmail.com">contato.ticketgol@gmail.com</a></p>
+        </div>
+      </div>
+      <!-- Sobre a empresa e redes sociais -->
+      <div class="footer-right">
+        <p class="footer-company-about">
+          <span>Sobre Nós</span>
+          <strong>TicketGol - </strong>Somos a sua porta de entrada para a emoção e a paixão dos grandes jogos. Na nossa plataforma, você encontrará uma ampla seleção de ingressos para os jogos mais emocionantes do momento.
+        </p>
+        <!-- Botões das redes sociais -->
+        <div class="btns-midias-sociais">
+          <button class="btn-midia-social">
+            <img src="Home/img/img-iconeFace.png" class="img-icones">
+          </button>
+          <button class="btn-midia-social">
+            <img src="Home/img/img-iconeInsta.png" class="img-icones">
+          </button>
+          <button class="btn-midia-social">
+            <img src="Home/img/img-iconeX.png" class="img-icones">
           </button>
         </div>
       </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-barueri.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-palmeiras.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-pontepreta.png" class="img2" />
-          <h2>Palmeiras x Ponte Preta</h2>
-          <p>Sábado, 16/03/2024</p>
-          <p>Estádio: Arena Barueri</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
-          </button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-pdm.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-corinthians.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-saobernardo.png" class="img3" />
-          <h2>Corinthians x São Bernardo</h2>
-          <p>Quinta, 14/03/2024</p>
-          <p>Estádio: Primeiro de Maio</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
-          </button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="image-box">
-          <img src="Jogos/img/img-centenario.jpg" />
-        </div>
-
-        <div class="content">
-          <img src="Jogos/img/img-gremio.png" />
-          <h1>X</h1>
-          <img src="Jogos/img/img-caxias.png" class="img2" />
-          <h2>Grêmio x Caxias</h2>
-          <p>Sábado, 16/03/2024</p>
-          <p>Estádio: Centenário</p>
-          <button class="btn-comprar">
-            <a href="Login.html" class="btn-comprar">
-              <img src="Jogos/img/img-entrar.png" alt="Entrar">Comprar
-          </a>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <footer class="footer-distributed">
-    <div class="footer-left">
-      <h3>Ticket<span>Gol</span></h3>
-      <p class="footer-links">
-        <a href="Home.html">Início</a>
-        |
-        <a href="Jogos.html">Eventos</a>
-        |
-        <a href="Informacoes.html">Informações</a>
-      </p>
-      <p class="footer-company-name">Copyright © 2021 <strong>TicketGol</strong> All rights reserved</p>
-    </div>
-    <div class="footer-center">
-      <div>
-        <i class="fa fa-map-marker"></i>
-        <p><span><b>São Paulo, SP</b></span></p>
-      </div>
-      <div>
-        <i class="fa fa-phone"></i>
-        <p>+55 (11) 93354-8219</p>
-      </div>
-      <div>
-        <i class="fa fa-envelope"></i>
-        <p><a href="mailto:sagar00001.co@gmail.com">contato.ticketgol@gmail.com</a></p>
-      </div>
-    </div>
-    <div class="footer-right">
-      <p class="footer-company-about">
-        <span>Sobre Nós</span>
-        <strong>TicketGol - </strong>Somos a sua porta de entrada para a emoção e a paixão dos grandes jogos. Na nossa plataforma, você encontrará uma ampla seleção de ingressos para os jogos mais emocionantes do momento. 
-      </p>
-      <div class="footer-icons">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-instagram"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-      </div>
-    </div>
-  </footer>
+    </footer>
+  </section>
 </body>
-
 </html>
-</body>
+
+
 </html>
