--- a/ticketGol/src/main/webapp/Login.html
+++ b/ticketGol/src/main/webapp/Login.html
@@ -36,11 +36,13 @@
     </div>
     
     <!-- Formulário de login -->
-    <form id="signin">
-      <input type="text" placeholder="Email" required />
+    <form id="signin" action="/login" method="post" >
+      <input type="text" name="email" id="emailLogin" required />
       <i class="fas fa-envelope iEmail"></i>
-      <input type="password" placeholder="Password" required />
+
+      <input type="password" name="senha" id="senhaLogin" required />
       <i class="fas fa-lock iPassword"></i>
+
       <div class="divCheck">
         <input type="checkbox" />
         <span>Remember Password</span>
@@ -49,15 +51,22 @@
     </form>
     
     <!-- Formulário de cadastro -->
-    <form id="signup">
-      <input type="text" placeholder="Nome" required />
-      <i class="fas fa-envelope iEmail"></i>
-      <input type="password" placeholder="E-Mail" required />
+    <form id="signup" action="/create-clientes" method="post">
+      <input type="text" name="nomeCliente" id="nomeCliente" required />
+           <i class="fas fa-envelope iEmail"></i>
+
+      <input type="text" type="text" name="email" id="email" required />
       <i class="fas fa-lock iPassword"></i>
-      <input type="password" placeholder="Telefone" required />
+
+      <input type="text"  name="telefone" id="telefone" required />
       <i class="fas fa-lock iPassword2"></i>
-      <input type="password" placeholder="Data de Nascimento" required />
+
+      <input type="text" name="dataDeNascimento" id="dataDeNascimento" required />
       <i class="fi fi-rr-calendar iCalendar "></i>
+
+      <input type="password" name="senhaCliente" id="senhaCliente" required />
+      <i class="fi fi-rr-calendar iCalendar "></i>
+
       <div class="divCheck">
       </div>
       <button type="submit">Sign up</button>
