Adicionando funcionalidade 'login' ao projeto

--- a/ticketGol/src/main/webapp/Login.html
+++ b/ticketGol/src/main/webapp/Login.html
@@ -37,10 +37,10 @@
     
     <!-- Formulário de login -->
     <form id="signin" action="/login" method="post" >
-      <input type="text" name="email" id="emailLogin" required />
+      <input type="text" name="emailLogin" id="emailLogin" required />
       <i class="fas fa-envelope iEmail"></i>
 
-      <input type="password" name="senha" id="senhaLogin" required />
+      <input type="password" name="senhaLogin" id="senhaLogin" required />
       <i class="fas fa-lock iPassword"></i>
 
       <div class="divCheck">
@@ -49,7 +49,8 @@
       </div>
       <button type="submit">Sign in</button>
     </form>
-    
+
+
     <!-- Formulário de cadastro -->
     <form id="signup" action="/create-clientes" method="post">
       <input type="text" name="nomeCliente" id="nomeCliente" required />
