--- a/ticketGol/src/main/webapp/Jogos.html
+++ b/ticketGol/src/main/webapp/Jogos.html
@@ -5,19 +5,21 @@
   <!-- Metadados e configurações iniciais -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  
+
   <!-- Título da página e ícone -->
   <title>TicketGol</title>
   <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
-  
+
   <!-- Configurações de visualização e estilos -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="Jogos/css/Jogos.css" />
-  
+
   <!-- Fontes e ícones -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet" />
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 </head>
@@ -67,8 +69,151 @@
             </button>
           </div>
         </div>
-        <!-- Os outros cards seguem a mesma estrutura -->
+
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
+        </div>
       </div>
+
+      <div class="card-pt2">
+        <!-- Card 1 -->
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image-box"></div>
+          <!-- Conteúdo do card -->
+          <div class="content">
+            <!-- Imagens e informações do jogo -->
+            <img src="Jogos/img/img-saopaulo.png" />
+            <h1>X</h1>
+            <img src="Jogos/img/img-novorizontino.png" class="img2" />
+            <h2>São Paulo x Novorizontino</h2>
+            <p>Domingo, 17/03/2024</p>
+            <p>Estádio: Morumbis</p>
+            <!-- Botão de comprar -->
+            <button class="btn-comprar">
+              <a href="Login.html" class="btn-comprar">
+                <img src="Jogos/img/img-iconeCarrinho.png" alt="Entrar">Comprar
+              </a>
+            </button>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
@@ -107,7 +252,8 @@
       <div class="footer-right">
         <p class="footer-company-about">
           <span>Sobre Nós</span>
-          <strong>TicketGol - </strong>Somos a sua porta de entrada para a emoção e a paixão dos grandes jogos. Na nossa plataforma, você encontrará uma ampla seleção de ingressos para os jogos mais emocionantes do momento.
+          <strong>TicketGol - </strong>Somos a sua porta de entrada para a emoção e a paixão dos grandes jogos. Na nossa
+          plataforma, você encontrará uma ampla seleção de ingressos para os jogos mais emocionantes do momento.
         </p>
         <!-- Botões das redes sociais -->
         <div class="btns-midias-sociais">
@@ -125,6 +271,7 @@
     </footer>
   </section>
 </body>
+
 </html>
 
 
