--- a/ticketGol/src/main/webapp/Login.html
+++ b/ticketGol/src/main/webapp/Login.html
@@ -1,78 +1,65 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
- <!-- Meta tags -->
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
- <!-- Título da página e ícone -->
- <title>TicketGol</title>
- <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
- <!-- Estilos CSS -->
- <link rel="stylesheet" href="Login/css/Login.css">
-  
- <!-- Font Awesome -->
- <script src="https://kit.fontawesome.com/cf6fa412bd.js" crossorigin="anonymous"></script>
-  
- <!-- Ícones Uicons -->
- <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.3.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <title>TicketGol</title>
+  <link rel="icon" type="image/x-icon" href="Jogos/img/img-icone2.png" />
+
+  <link rel="stylesheet" href="Login/css/Login.css">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.3.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
+
 <body>
- <!-- Imagem de fundo -->
- <img class="imagem" src="Login/img/img-fundoLogin.jpg">
-  
- <!-- Container principal -->
- <div class="container">
-    <!-- Logo -->
-    <img class="logo" src="Login/img/ticket.png">
-    
-    <!-- Botões de formulário -->
+  <div class="container">
     <div class="buttonsForm">
       <div class="btnColor"></div>
-      <button id="btnSignin">Sign in</button>
-      <button id="btnSignup">Sign up</button>
+      <button id="btnSignin" class="btnLogin">Login</button>
+      <button id="btnSignup" class="btnCadastro">Cadastrar</button>
     </div>
-    
+
     <!-- Formulário de login -->
     <form id="signin" action="/login" method="post" >
-      <input type="text" name="emailLogin" id="emailLogin" placeholder="Digite seu email:" required />
-      <i class="fas fa-envelope iEmail"></i>
+      <input type="text" name="emailLogin" id="emailLogin" required />
+      <i class="fi fi-rr-envelope iEmailLogin" style="color: #ffffff;"></i>
 
-      <input type="password" name="senhaLogin" id="senhaLogin" placeholder="Digite sua senha:" required />
-      <i class="fas fa-lock iPassword"></i>
+      <input type="password" name="senhaLogin" id="senhaLogin" required />
+      <i class="fi fi-rr-lock iLockLogin" style="color: #ffffff;"></i>
 
       <div class="divCheck">
+        <input type="checkbox" />
+        <span>Lembrar Senha</span>
       </div>
-      <button type="submit">Sign in</button>
+      <button type="submit" class="btn-login">Login</button>
     </form>
 
     <!-- Formulário de cadastro -->
     <form id="signup" action="/create-clientes" method="post">
+      <input type="text" name="nomeCliente" id="nomeCliente" required />
+      <i class="fi fi-rr-user iUser" style="color: #ffffff;"></i>
 
-      <input type="text" name="nomeCliente" id="nomeCliente" placeholder="Digite seu nome:" required />
-      <i class="fi fi-ss-user iPassword3"></i>
+      <input type="text" type="text" name="email" id="email" required />
+      <i class="fi fi-rr-envelope iEmail" style="color: #ffffff;"></i>
 
-      <input type="text" name="email" id="email" placeholder="Digite seu email:" required />
-      <i class="fas fa-envelope iPassword"></i>
+      <input type="text" name="telefone" id="telefone" required />
+      <i class="fi fi-rr-phone-call iPhone" style="color: #ffffff;"></i>
 
-      <input type="text" name="telefone" id="telefone" placeholder="Digite seu telefone:" required />
-      <i class="fi fi-sr-circle-phone iPassword2"></i>
+      <input type="text" name="dataDeNascimento" id="dataDeNascimento" required />
+      <i class="fi fi-rr-calendar iCalendar" style="color: #ffffff;"></i>
 
-      <input type="text" name="dataDeNascimento" id="dataDeNascimento" placeholder="Digite a data de nascimento:" required />
-      <i class="fi fi-rr-calendar iCalendar "></i>
-
-      <input type="password" name="senhaCliente" id="senhaCliente" placeholder="Digite sua senha:" required />
-      <i class="fas fa-lock iPassword4"></i>
+      <input type="password" name="senhaCliente" id="senhaCliente" required />
+      <i class="fi fi-rr-lock iLock" style="color: #ffffff;"></i>
 
       <div class="divCheck">
       </div>
-      <button type="submit">Sign up</button>
+      <button type="submit" class="btn-cadastro">Cadastrar</button>
     </form>
- </div>
-  
- <!-- Scripts -->
- <script src="Login/js/Login.js"></script>
+  </div>
+
+  <script src="teste/js/teste.js"></script>
 </body>
+
 </html>
